old/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: troubleshooting-pod
spec:
  containers:
  - name: troubleshooting-container
    image: alpine
    command:
      - sleep
      - "3600"
