old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: basic-auth

spec:
  rules:
    - host: sky.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external
                port:
                 number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twonginxsvc
                port:
                 number: 80
